--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,13 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94702256963",
-	"ownerNumberr": "94702256963",
-	"botnumber": "94702256963",
+	"ownerNumber": "233208459757",
+	"ownerNumberr": "233208459757",
+	"botnumber": "233208459757,
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94786825798",
+	"wa": "wa.me/+233208459757",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/ChamodKeshan",
 	"ownername": "© ChamodKeshan",
